enable preview in dockerfile